tests/baselines/reference/enumAssignability.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(9,1): error TS2322: Type 'F' is not assignable to type 'E'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(10,1): error TS2322: Type 'E' is not assignable to type 'F'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(29,9): error TS2322: Type 'E' is not assignable to type 'string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(30,9): error TS2322: Type 'E' is not assignable to type 'boolean'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(31,9): error TS2322: Type 'E' is not assignable to type 'Date'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(33,9): error TS2322: Type 'E' is not assignable to type 'void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(36,9): error TS2322: Type 'E' is not assignable to type '() => {}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(37,9): error TS2322: Type 'E' is not assignable to type 'Function'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(38,9): error TS2322: Type 'E' is not assignable to type '(x: number) => string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(39,5): error TS2322: Type 'E' is not assignable to type 'C'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(40,5): error TS2322: Type 'E' is not assignable to type 'I'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(41,9): error TS2322: Type 'E' is not assignable to type 'number[]'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(42,9): error TS2322: Type 'E' is not assignable to type '{ foo: string; }'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(43,9): error TS2322: Type 'E' is not assignable to type '<T>(x: T) => T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(45,9): error TS2322: Type 'E' is not assignable to type 'String'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(48,9): error TS2322: Type 'E' is not assignable to type 'T'.
  'E' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(49,9): error TS2322: Type 'E' is not assignable to type 'U'.
  'E' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(50,9): error TS2322: Type 'E' is not assignable to type 'V'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(51,13): error TS2322: Type 'E' is not assignable to type 'A'.
  'E' is assignable to the constraint of type 'A', but 'A' could be instantiated with a different subtype of constraint 'Number'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts(52,13): error TS2322: Type 'E' is not assignable to type 'B'.
  'E' is assignable to the constraint of type 'B', but 'B' could be instantiated with a different subtype of constraint 'E'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts (20 errors) ====
    // enums assignable to number, any, Object, errors unless otherwise noted
    
    enum E { A }
    enum F { B }
    
    var e = E.A;
    var f = F.B;
    
    e = f; 
    ~
!!! error TS2322: Type '{|F|0|}' is not assignable to type '{|E|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:4:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
    f = e; 
    ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|F|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:4:6
    e = 1; // ok
    f = 1; // ok
    var x: number = e; // ok
    x = f; // ok
    
    module Others {
        var a: any = e; // ok
    
        class C {
            foo: string;
        }
        var ac: C;
        interface I {
            foo: string;
        }
        var ai: I;
    
        var b: number = e; // ok
        var c: string = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
        var d: boolean = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type 'boolean'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
        var ee: Date = e;
            ~~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|Date|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:729:11
        var f: any = e; // ok
        var g: void = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type 'void'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
        var h: Object = e;
        var i: {} = e;
        var j: () => {} = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '() => {}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
        var k: Function = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|Function|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:272:11
        var l: (x: number) => string = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '(x: number) => string'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
        ac = e;
        ~~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|C|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:19:11
        ai = e;
        ~~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|I|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:23:15
        var m: number[] = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type 'number[]'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
        var n: { foo: string } = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{ {|foo|1|}: string; }'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:42:14
        var o: <T>(x: T) => T = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '<{|T|1|}>(x: {|T|2|}) => {|T|3|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:43:13
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:43:13
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:43:13
        var p: Number = e;
        var q: String = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|String|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:394:11
    
        function foo<T, U extends T, V extends Date, A extends Number, B extends E>(x: T, y: U, z: V) {
            x = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|E|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:18
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:18
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:18
            y = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|U|1|}'.
!!! error TS2322:   '{|E|2|}' is assignable to the constraint of type '{|U|3|}', but '{|U|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:21
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:21
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:21
            z = e;
            ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|V|1|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:34
            var a: A = e;
                ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|A|1|}'.
!!! error TS2322:   '{|E|2|}' is assignable to the constraint of type '{|A|3|}', but '{|A|4|}' could be instantiated with a different subtype of constraint '{|Number|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:50
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:50
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:50
!!! annotated symbol 5 /.ts/lib.es5.d.ts:542:11
            var b: B = e;
                ~
!!! error TS2322: Type '{|E|0|}' is not assignable to type '{|B|1|}'.
!!! error TS2322:   '{|E|2|}' is assignable to the constraint of type '{|B|3|}', but '{|B|4|}' could be instantiated with a different subtype of constraint '{|E|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:68
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:68
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:47:68
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/enumAssignability.ts:3:6
        }
    }